--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "flatpages/default.html" %}
+
+{% block content %}
     <div id="main"></div>
     <script src='http://localhost:8090/bundle.js'></script>
-</body>
-</html>
+{% endblock %}
