--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <div id="main"></div>
-    <script src='http://localhost:8090/bundle.js'></script>
+    <script src='{% static "javascripts/bundle.js" %}'></script>
 {% endblock %}
