--- a/static/public/stylesheets/style.less
+++ b/static/public/stylesheets/style.less
@@ -1,3 +1,34 @@
 .active-link {
   font-weight: bold;
 }
+
+.navbar-item {
+  margin: 10px;
+}
+
+.footer-inner {
+  background-color: #333333;
+  margin-top: -10px;
+  height: 50px;
+}
+
+#top_page {
+  margin-bottom: 0;
+  background-color: #333333;
+}
+
+.header {
+  .navbar-inverse {
+    margin: 0;
+    background-color: #FBFBFB;
+    border-color: #FBFBFB;
+  }
+  margin: 0;
+  background-color: #FBFBFB;
+  border-color: #FBFBFB;
+}
+
+.red-line {
+  background-color: #a41515;
+  height: 50px;
+}
