--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,8 +1,10 @@
-{% extends "partials/footer.html" %}
-{% block footer %}
-    <div class="footer-inner">
-        <a>test</a>
-        <a>link</a>
-        <a>text</a>
+{% load i18n %}
+<footer class="col-md-12 footer">
+    <div class=" footer-inner">
+        <ul class="col-md-12 nav navbar-nav row">
+            <li class="col-md-4"><a>Email: asteroid-shop@example.com</a></li>
+            <li class="col-md-4"><a>Телефон: 8(800)5553535</a></li>
+            <li class="col-md-4"><a>Адрес: г.Москва, ул. Ленина 35</a></li>
+        </ul>
     </div>
-{% endblock %}
+</footer>
