--- a/templates/partials/nav_primary.html
+++ b/templates/partials/nav_primary.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 <div class="navbar primary navbar-static-top navbar-inverse">
-    <div class="container-fluid">
+    <div class="row">
         <div class="navbar-header pull-right">
             {# This is used in mobile view #}
             <a class="btn btn-default navbar-toggle collapsed" data-toggle="collapse" data-target=".primary-collapse">
