--- a/templates/catalogue/detail.html
+++ b/templates/catalogue/detail.html
@@ -1,6 +1,21 @@
-{% extends "oscar/catalogue/detail.html" %}
-{% load i18n %}
+{% extends "layout.html" %}
+
 {% load history_tags %}
+{% load currency_filters %}
+{% load reviews_tags %}
+{% load staticfiles %}
+{% load product_tags %}
+{% load display_tags %}
+{% load i18n %}
+{% load purchase_info_tags %}
+
+{% block title %}
+    {{ product.title }} | {{ block.super }}
+{% endblock %}
+
+{% block description %}
+    {{ product.description|default:""|striptags }}
+{% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
@@ -20,4 +35,79 @@
         {% endif %}
     {% endwith %}
 </ul>
+{% endblock %}
+
+{% block header %}
+{% endblock header %}
+
+{% block content %}
+
+<article class="product_page"><!-- Start of product page -->
+
+    <div class="row">
+
+        {% block product_gallery %}
+        <div class="col-sm-6">
+            {% include "catalogue/partials/gallery.html" %}
+        </div>
+        {% endblock %}
+
+        {% block product_main %}
+        <div class="col-sm-6 product_main">
+            {% comment %}
+            This is a but clunky here.  Better to have some kind of JS-driven dashboard menu that
+            pops out when clicked.  A bit like the Django-Debug-Toolbar button
+            {% endcomment %}
+            {% if user.is_authenticated and user.is_staff %}
+                <a class="pull-right hidden-xs" href="{% url 'dashboard:catalogue-product' pk=product.id %}"><small><i class="icon-edit"></i> {% trans "Edit this product" %}</small></a>
+            {% endif %}
+            <h1>{{ product.get_title }}</h1>
+
+            {% block product_stock_record %}
+                {% include "catalogue/partials/stock_record.html" with verbose=1 %}
+            {% endblock %}
+
+            <hr/>
+
+            {% block product_basket_form %}
+                {% include "catalogue/partials/add_to_basket_form.html" %}
+            {% endblock %}
+            {% block product_info %}
+                <div class="sub-header">
+                    <h2>{% trans "Product Information" %}</h2>
+                </div>
+                <table class="table table-striped">
+                    {% purchase_info_for_product request product as session %}
+                    {% if session.price.exists %}
+                        <tr>
+                            <th>{% trans "Price (excl. tax)" %}</th><td>{{ session.price.excl_tax|currency:session.price.currency }}</td>
+                        </tr>
+                    {% endif %}
+                    {% for av in product.attribute_values.all %}
+                        <tr>
+                            <th>{{ av.attribute.name }}</th>
+                            <td>{{ av.value_as_html }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endblock %}
+        </div><!-- /col-sm-6 -->
+        {% endblock %}
+
+    </div><!-- /row -->
+
+    {% block product_description %}
+        {% if product.description %}
+        <div id="product_description" class="sub-header">
+            <h2>{% trans "Product Description" %}</h2>
+        </div>
+        <p>{{ product.description|safe }}</p>
+        {% endif %}
+    {% endblock %}
+
+</article><!-- End of product page -->
+{% endblock content %}
+
+{% block extrascripts %}
+    {{ block.super }}
 {% endblock %}
