--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
 
 {% block content %}
     <div id="main"></div>
-{#    <script src='{% static "javascripts/bundle.js" %}'></script>#}
-    <script src='http://localhost:8090/bundle.js'></script>
+    <script src='{% static "javascripts/bundle.js" %}'></script>
+{#    <script src='http://localhost:8090/bundle.js'></script>#}
 {% endblock %}
